More sonar qube issues