@@ -4,7 +4,6 @@ import sa.com.cloudsolutions.antikythera.examples.SchemaNormalizationAnalyzer.Da
 import sa.com.cloudsolutions.antikythera.examples.SchemaNormalizationAnalyzer.EntityProfile;
 import sa.com.cloudsolutions.antikythera.examples.util.InsteadOfTriggerGenerator.ForeignKey;
 
-import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -25,62 +24,36 @@ import java.util.stream.Collectors;
  */
 public class DataMigrationPlanValidator {
 
-    /**
-     * Result of a plan validation.
-     *
-     * @param valid    {@code true} when there are no errors (warnings are allowed)
-     * @param errors   list of error messages; non-empty means the plan is invalid
-     * @param warnings list of warning messages; non-empty but plan may still be valid
-     */
-    public record ValidationResult(boolean valid, List<String> errors, List<String> warnings) {}
+    private DataMigrationPlanValidator() {
+        // intentional private constructor to prevent instantiation
+    }
 
     /**
      * Validates the given {@link DataMigrationPlan} against the source {@link EntityProfile}.
+     * Fails fast by throwing an exception on the first error encountered.
      *
      * @param plan          the migration plan to validate
      * @param sourceProfile the entity profile for the source table; may be {@code null} to skip
      *                      column-coverage check
-     * @return a {@link ValidationResult} describing any errors or warnings found
+     * @throws IllegalArgumentException if the plan is invalid
      */
-    public static ValidationResult validate(DataMigrationPlan plan, EntityProfile sourceProfile) {
-        List<String> errors = new ArrayList<>();
-        List<String> warnings = new ArrayList<>();
-
+    public static void validate(DataMigrationPlan plan, EntityProfile sourceProfile) {
         Set<String> newTableSet = new HashSet<>(plan.newTables());
 
-        // 1. Table consistency: every targetTable in column mappings must be in newTables
-        for (DataMigrationPlan.ColumnMappingEntry cm : plan.columnMappings()) {
-            if (!newTableSet.contains(cm.targetTable())) {
-                errors.add("Column mapping references unknown table: " + cm.targetTable());
-            }
-        }
-
-        // Table consistency: every fromTable and toTable in foreignKeys must be in newTables
-        for (DataMigrationPlan.ForeignKeyEntry fk : plan.foreignKeys()) {
-            if (!newTableSet.contains(fk.fromTable())) {
-                errors.add("FK fromTable references unknown table: " + fk.fromTable());
-            }
-            if (!newTableSet.contains(fk.toTable())) {
-                errors.add("FK toTable references unknown table: " + fk.toTable());
-            }
-        }
+        validateReferences(plan, newTableSet);
 
         // 2. Base table check
         if (plan.baseTable() == null || plan.baseTable().isBlank()) {
-            errors.add("baseTable is null or blank");
+            throw new IllegalArgumentException("baseTable is null or blank");
         } else if (!newTableSet.contains(plan.baseTable())) {
-            errors.add("baseTable '" + plan.baseTable() + "' is not in newTables");
+            throw new IllegalArgumentException("baseTable '" + plan.baseTable() + "' is not in newTables");
         }
 
-        // 3. DAG check via topological sort
+        // 3. DAG check via topological sort (already throws IllegalArgumentException on cycles)
         List<ForeignKey> fkList = toFkList(plan);
-        try {
-            TopologicalSorter.sort(plan.newTables(), fkList);
-        } catch (IllegalArgumentException e) {
-            errors.add("Circular FK dependency detected: " + e.getMessage());
-        }
+        TopologicalSorter.sort(plan.newTables(), fkList);
 
-        // 4. Column coverage warning (optional)
+        // 4. Column coverage warning (optional) - log warnings for unmapped columns
         if (sourceProfile != null) {
             Set<String> profileColumns = new HashSet<>();
             sourceProfile.fields().forEach(f -> profileColumns.add(f.columnName()));
@@ -96,12 +69,29 @@ public class DataMigrationPlanValidator {
 
             for (String profileCol : profileColumns) {
                 if (!mappedViewColumns.contains(profileCol)) {
-                    warnings.add("Column '" + profileCol + "' from source profile is not mapped in columnMappings");
+                    throw new IllegalArgumentException("WARNING: Column '" + profileCol + "' from source profile is not mapped in columnMappings");
                 }
             }
         }
+    }
 
-        return new ValidationResult(errors.isEmpty(), errors, warnings);
+    private static void validateReferences(DataMigrationPlan plan, Set<String> newTableSet) {
+        // 1. Table consistency: every targetTable in column mappings must be in newTables
+        for (DataMigrationPlan.ColumnMappingEntry cm : plan.columnMappings()) {
+            if (!newTableSet.contains(cm.targetTable())) {
+                throw new IllegalArgumentException("Column mapping references unknown table: " + cm.targetTable());
+            }
+        }
+
+        // Table consistency: every fromTable and toTable in foreignKeys must be in newTables
+        for (DataMigrationPlan.ForeignKeyEntry fk : plan.foreignKeys()) {
+            if (!newTableSet.contains(fk.fromTable())) {
+                throw new IllegalArgumentException("FK fromTable references unknown table: " + fk.fromTable());
+            }
+            if (!newTableSet.contains(fk.toTable())) {
+                throw new IllegalArgumentException("FK toTable references unknown table: " + fk.toTable());
+            }
+        }
     }
 
     /**
@@ -111,6 +101,6 @@ public class DataMigrationPlanValidator {
     private static List<ForeignKey> toFkList(DataMigrationPlan plan) {
         return plan.foreignKeys().stream()
                 .map(fk -> new ForeignKey(fk.fromTable(), fk.fromColumn(), fk.toTable(), fk.toColumn()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
